--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,6 +3,8 @@
 
 
 <head>
+  <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQkABgCTMpKvgkjLeTjbHjXMoCfPXxgOu2KEw&usqp=CAU" type="image/x-icon">
+
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/4b9ba14b0f.js" crossorigin="anonymous"></script>
     <style>
